# rust-axum-seaorm-postgres-example

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml
migration/: Cargo.toml
migration/src/: lib.rs  m20240202_124954_create_table_users.rs  m20240202_125007_create_table_todos.rs  main.rs
migration/src/domain/model/: prelude.rs  todos.rs  users.rs
src/: main.rs
src/domain/model/: mod.rs
