[package]
name = "rust-axum-seaorm-postgres"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sea-orm = { version = "0.12.2", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
log = "0.4.20"
tokio = { version = "1.37.0", features = ["full"] }
env_logger = "0.11.1"
